parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM LBRACE declarations statements RBRACE
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> empty
Rule 4     declaration -> type declaration_list SEMI
Rule 5     declaration_list -> ID
Rule 6     declaration_list -> declaration_list COMMA ID
Rule 7     type -> INT
Rule 8     type -> FLOAT
Rule 9     type -> BOOL
Rule 10    statements -> statements statement
Rule 11    statements -> empty
Rule 12    statement -> WRITE expression SEMI
Rule 13    statement -> READ ID SEMI
Rule 14    statement -> IF expression THEN LBRACE statements RBRACE END
Rule 15    statement -> IF expression THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE END
Rule 16    statement -> DO LBRACE statements RBRACE UNTIL LPAREN expression RPAREN SEMI
Rule 17    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 18    statement -> ID ASSIGN expression SEMI
Rule 19    expression -> expression PLUS term
Rule 20    expression -> expression MINUS term
Rule 21    expression -> expression LT term
Rule 22    expression -> expression LE term
Rule 23    expression -> expression GT term
Rule 24    expression -> expression GE term
Rule 25    expression -> expression EQ term
Rule 26    expression -> expression NEQ term
Rule 27    expression -> expression AND term
Rule 28    expression -> expression OR term
Rule 29    expression -> term
Rule 30    term -> term TIMES factor
Rule 31    term -> term DIVIDE factor
Rule 32    term -> term EXPONENT factor
Rule 33    term -> factor
Rule 34    factor -> NUMBER
Rule 35    factor -> ID
Rule 36    factor -> TRUE
Rule 37    factor -> FALSE
Rule 38    factor -> LPAREN expression RPAREN
Rule 39    empty -> <empty>

Terminals, with rules where they appear

AND                  : 27
ASSIGN               : 18
BOOL                 : 9
COMMA                : 6
DIVIDE               : 31
DO                   : 16
ELSE                 : 15
END                  : 14 15
EQ                   : 25
EXPONENT             : 32
FALSE                : 37
FLOAT                : 8
GE                   : 24
GT                   : 23
ID                   : 5 6 13 18 35
IF                   : 14 15
INT                  : 7
LBRACE               : 1 14 15 15 16 17
LE                   : 22
LPAREN               : 16 17 38
LT                   : 21
MINUS                : 20
NEQ                  : 26
NUMBER               : 34
OR                   : 28
PLUS                 : 19
PROGRAM              : 1
RBRACE               : 1 14 15 15 16 17
READ                 : 13
RPAREN               : 16 17 38
SEMI                 : 4 12 13 16 18
THEN                 : 14 15
TIMES                : 30
TRUE                 : 36
UNTIL                : 16
WHILE                : 17
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

declaration          : 2
declaration_list     : 4 6
declarations         : 1 2
empty                : 3 11
expression           : 12 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 38
factor               : 30 31 32 33
program              : 0
statement            : 10
statements           : 1 10 14 15 15 16 17
term                 : 19 20 21 22 23 24 25 26 27 28 29 30 31 32
type                 : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM LBRACE declarations statements RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . LBRACE declarations statements RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> PROGRAM LBRACE . declarations statements RBRACE
    (2) declarations -> . declarations declaration
    (3) declarations -> . empty
    (39) empty -> .

    INT             reduce using rule 39 (empty -> .)
    FLOAT           reduce using rule 39 (empty -> .)
    BOOL            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)
    WRITE           reduce using rule 39 (empty -> .)
    READ            reduce using rule 39 (empty -> .)
    IF              reduce using rule 39 (empty -> .)
    DO              reduce using rule 39 (empty -> .)
    WHILE           reduce using rule 39 (empty -> .)
    ID              reduce using rule 39 (empty -> .)

    declarations                   shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PROGRAM LBRACE declarations . statements RBRACE
    (2) declarations -> declarations . declaration
    (10) statements -> . statements statement
    (11) statements -> . empty
    (4) declaration -> . type declaration_list SEMI
    (39) empty -> .
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . BOOL

    RBRACE          reduce using rule 39 (empty -> .)
    WRITE           reduce using rule 39 (empty -> .)
    READ            reduce using rule 39 (empty -> .)
    IF              reduce using rule 39 (empty -> .)
    DO              reduce using rule 39 (empty -> .)
    WHILE           reduce using rule 39 (empty -> .)
    ID              reduce using rule 39 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12

    statements                     shift and go to state 6
    declaration                    shift and go to state 7
    empty                          shift and go to state 8
    type                           shift and go to state 9

state 5

    (3) declarations -> empty .

    INT             reduce using rule 3 (declarations -> empty .)
    FLOAT           reduce using rule 3 (declarations -> empty .)
    BOOL            reduce using rule 3 (declarations -> empty .)
    RBRACE          reduce using rule 3 (declarations -> empty .)
    WRITE           reduce using rule 3 (declarations -> empty .)
    READ            reduce using rule 3 (declarations -> empty .)
    IF              reduce using rule 3 (declarations -> empty .)
    DO              reduce using rule 3 (declarations -> empty .)
    WHILE           reduce using rule 3 (declarations -> empty .)
    ID              reduce using rule 3 (declarations -> empty .)


state 6

    (1) program -> PROGRAM LBRACE declarations statements . RBRACE
    (10) statements -> statements . statement
    (12) statement -> . WRITE expression SEMI
    (13) statement -> . READ ID SEMI
    (14) statement -> . IF expression THEN LBRACE statements RBRACE END
    (15) statement -> . IF expression THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE END
    (16) statement -> . DO LBRACE statements RBRACE UNTIL LPAREN expression RPAREN SEMI
    (17) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (18) statement -> . ID ASSIGN expression SEMI

    RBRACE          shift and go to state 13
    WRITE           shift and go to state 15
    READ            shift and go to state 16
    IF              shift and go to state 18
    DO              shift and go to state 19
    WHILE           shift and go to state 20
    ID              shift and go to state 17

    statement                      shift and go to state 14

state 7

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    BOOL            reduce using rule 2 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)
    WRITE           reduce using rule 2 (declarations -> declarations declaration .)
    READ            reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    DO              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    ID              reduce using rule 2 (declarations -> declarations declaration .)


state 8

    (11) statements -> empty .

    RBRACE          reduce using rule 11 (statements -> empty .)
    WRITE           reduce using rule 11 (statements -> empty .)
    READ            reduce using rule 11 (statements -> empty .)
    IF              reduce using rule 11 (statements -> empty .)
    DO              reduce using rule 11 (statements -> empty .)
    WHILE           reduce using rule 11 (statements -> empty .)
    ID              reduce using rule 11 (statements -> empty .)


state 9

    (4) declaration -> type . declaration_list SEMI
    (5) declaration_list -> . ID
    (6) declaration_list -> . declaration_list COMMA ID

    ID              shift and go to state 22

    declaration_list               shift and go to state 21

state 10

    (7) type -> INT .

    ID              reduce using rule 7 (type -> INT .)


state 11

    (8) type -> FLOAT .

    ID              reduce using rule 8 (type -> FLOAT .)


state 12

    (9) type -> BOOL .

    ID              reduce using rule 9 (type -> BOOL .)


state 13

    (1) program -> PROGRAM LBRACE declarations statements RBRACE .

    $end            reduce using rule 1 (program -> PROGRAM LBRACE declarations statements RBRACE .)


state 14

    (10) statements -> statements statement .

    RBRACE          reduce using rule 10 (statements -> statements statement .)
    WRITE           reduce using rule 10 (statements -> statements statement .)
    READ            reduce using rule 10 (statements -> statements statement .)
    IF              reduce using rule 10 (statements -> statements statement .)
    DO              reduce using rule 10 (statements -> statements statement .)
    WHILE           reduce using rule 10 (statements -> statements statement .)
    ID              reduce using rule 10 (statements -> statements statement .)


state 15

    (12) statement -> WRITE . expression SEMI
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . expression GE term
    (25) expression -> . expression EQ term
    (26) expression -> . expression NEQ term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (29) expression -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    expression                     shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 25

state 16

    (13) statement -> READ . ID SEMI

    ID              shift and go to state 31


state 17

    (18) statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 32


state 18

    (14) statement -> IF . expression THEN LBRACE statements RBRACE END
    (15) statement -> IF . expression THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE END
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . expression GE term
    (25) expression -> . expression EQ term
    (26) expression -> . expression NEQ term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (29) expression -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    expression                     shift and go to state 33
    term                           shift and go to state 24
    factor                         shift and go to state 25

state 19

    (16) statement -> DO . LBRACE statements RBRACE UNTIL LPAREN expression RPAREN SEMI

    LBRACE          shift and go to state 34


state 20

    (17) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 35


state 21

    (4) declaration -> type declaration_list . SEMI
    (6) declaration_list -> declaration_list . COMMA ID

    SEMI            shift and go to state 36
    COMMA           shift and go to state 37


state 22

    (5) declaration_list -> ID .

    SEMI            reduce using rule 5 (declaration_list -> ID .)
    COMMA           reduce using rule 5 (declaration_list -> ID .)


state 23

    (12) statement -> WRITE expression . SEMI
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term
    (24) expression -> expression . GE term
    (25) expression -> expression . EQ term
    (26) expression -> expression . NEQ term
    (27) expression -> expression . AND term
    (28) expression -> expression . OR term

    SEMI            shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    LT              shift and go to state 41
    LE              shift and go to state 42
    GT              shift and go to state 43
    GE              shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 24

    (29) expression -> term .
    (30) term -> term . TIMES factor
    (31) term -> term . DIVIDE factor
    (32) term -> term . EXPONENT factor

    SEMI            reduce using rule 29 (expression -> term .)
    PLUS            reduce using rule 29 (expression -> term .)
    MINUS           reduce using rule 29 (expression -> term .)
    LT              reduce using rule 29 (expression -> term .)
    LE              reduce using rule 29 (expression -> term .)
    GT              reduce using rule 29 (expression -> term .)
    GE              reduce using rule 29 (expression -> term .)
    EQ              reduce using rule 29 (expression -> term .)
    NEQ             reduce using rule 29 (expression -> term .)
    AND             reduce using rule 29 (expression -> term .)
    OR              reduce using rule 29 (expression -> term .)
    THEN            reduce using rule 29 (expression -> term .)
    RPAREN          reduce using rule 29 (expression -> term .)
    TIMES           shift and go to state 49
    DIVIDE          shift and go to state 50
    EXPONENT        shift and go to state 51


state 25

    (33) term -> factor .

    TIMES           reduce using rule 33 (term -> factor .)
    DIVIDE          reduce using rule 33 (term -> factor .)
    EXPONENT        reduce using rule 33 (term -> factor .)
    SEMI            reduce using rule 33 (term -> factor .)
    PLUS            reduce using rule 33 (term -> factor .)
    MINUS           reduce using rule 33 (term -> factor .)
    LT              reduce using rule 33 (term -> factor .)
    LE              reduce using rule 33 (term -> factor .)
    GT              reduce using rule 33 (term -> factor .)
    GE              reduce using rule 33 (term -> factor .)
    EQ              reduce using rule 33 (term -> factor .)
    NEQ             reduce using rule 33 (term -> factor .)
    AND             reduce using rule 33 (term -> factor .)
    OR              reduce using rule 33 (term -> factor .)
    THEN            reduce using rule 33 (term -> factor .)
    RPAREN          reduce using rule 33 (term -> factor .)


state 26

    (34) factor -> NUMBER .

    TIMES           reduce using rule 34 (factor -> NUMBER .)
    DIVIDE          reduce using rule 34 (factor -> NUMBER .)
    EXPONENT        reduce using rule 34 (factor -> NUMBER .)
    SEMI            reduce using rule 34 (factor -> NUMBER .)
    PLUS            reduce using rule 34 (factor -> NUMBER .)
    MINUS           reduce using rule 34 (factor -> NUMBER .)
    LT              reduce using rule 34 (factor -> NUMBER .)
    LE              reduce using rule 34 (factor -> NUMBER .)
    GT              reduce using rule 34 (factor -> NUMBER .)
    GE              reduce using rule 34 (factor -> NUMBER .)
    EQ              reduce using rule 34 (factor -> NUMBER .)
    NEQ             reduce using rule 34 (factor -> NUMBER .)
    AND             reduce using rule 34 (factor -> NUMBER .)
    OR              reduce using rule 34 (factor -> NUMBER .)
    THEN            reduce using rule 34 (factor -> NUMBER .)
    RPAREN          reduce using rule 34 (factor -> NUMBER .)


state 27

    (35) factor -> ID .

    TIMES           reduce using rule 35 (factor -> ID .)
    DIVIDE          reduce using rule 35 (factor -> ID .)
    EXPONENT        reduce using rule 35 (factor -> ID .)
    SEMI            reduce using rule 35 (factor -> ID .)
    PLUS            reduce using rule 35 (factor -> ID .)
    MINUS           reduce using rule 35 (factor -> ID .)
    LT              reduce using rule 35 (factor -> ID .)
    LE              reduce using rule 35 (factor -> ID .)
    GT              reduce using rule 35 (factor -> ID .)
    GE              reduce using rule 35 (factor -> ID .)
    EQ              reduce using rule 35 (factor -> ID .)
    NEQ             reduce using rule 35 (factor -> ID .)
    AND             reduce using rule 35 (factor -> ID .)
    OR              reduce using rule 35 (factor -> ID .)
    THEN            reduce using rule 35 (factor -> ID .)
    RPAREN          reduce using rule 35 (factor -> ID .)


state 28

    (36) factor -> TRUE .

    TIMES           reduce using rule 36 (factor -> TRUE .)
    DIVIDE          reduce using rule 36 (factor -> TRUE .)
    EXPONENT        reduce using rule 36 (factor -> TRUE .)
    SEMI            reduce using rule 36 (factor -> TRUE .)
    PLUS            reduce using rule 36 (factor -> TRUE .)
    MINUS           reduce using rule 36 (factor -> TRUE .)
    LT              reduce using rule 36 (factor -> TRUE .)
    LE              reduce using rule 36 (factor -> TRUE .)
    GT              reduce using rule 36 (factor -> TRUE .)
    GE              reduce using rule 36 (factor -> TRUE .)
    EQ              reduce using rule 36 (factor -> TRUE .)
    NEQ             reduce using rule 36 (factor -> TRUE .)
    AND             reduce using rule 36 (factor -> TRUE .)
    OR              reduce using rule 36 (factor -> TRUE .)
    THEN            reduce using rule 36 (factor -> TRUE .)
    RPAREN          reduce using rule 36 (factor -> TRUE .)


state 29

    (37) factor -> FALSE .

    TIMES           reduce using rule 37 (factor -> FALSE .)
    DIVIDE          reduce using rule 37 (factor -> FALSE .)
    EXPONENT        reduce using rule 37 (factor -> FALSE .)
    SEMI            reduce using rule 37 (factor -> FALSE .)
    PLUS            reduce using rule 37 (factor -> FALSE .)
    MINUS           reduce using rule 37 (factor -> FALSE .)
    LT              reduce using rule 37 (factor -> FALSE .)
    LE              reduce using rule 37 (factor -> FALSE .)
    GT              reduce using rule 37 (factor -> FALSE .)
    GE              reduce using rule 37 (factor -> FALSE .)
    EQ              reduce using rule 37 (factor -> FALSE .)
    NEQ             reduce using rule 37 (factor -> FALSE .)
    AND             reduce using rule 37 (factor -> FALSE .)
    OR              reduce using rule 37 (factor -> FALSE .)
    THEN            reduce using rule 37 (factor -> FALSE .)
    RPAREN          reduce using rule 37 (factor -> FALSE .)


state 30

    (38) factor -> LPAREN . expression RPAREN
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . expression GE term
    (25) expression -> . expression EQ term
    (26) expression -> . expression NEQ term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (29) expression -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    expression                     shift and go to state 52
    term                           shift and go to state 24
    factor                         shift and go to state 25

state 31

    (13) statement -> READ ID . SEMI

    SEMI            shift and go to state 53


state 32

    (18) statement -> ID ASSIGN . expression SEMI
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . expression GE term
    (25) expression -> . expression EQ term
    (26) expression -> . expression NEQ term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (29) expression -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    expression                     shift and go to state 54
    term                           shift and go to state 24
    factor                         shift and go to state 25

state 33

    (14) statement -> IF expression . THEN LBRACE statements RBRACE END
    (15) statement -> IF expression . THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE END
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term
    (24) expression -> expression . GE term
    (25) expression -> expression . EQ term
    (26) expression -> expression . NEQ term
    (27) expression -> expression . AND term
    (28) expression -> expression . OR term

    THEN            shift and go to state 55
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    LT              shift and go to state 41
    LE              shift and go to state 42
    GT              shift and go to state 43
    GE              shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 34

    (16) statement -> DO LBRACE . statements RBRACE UNTIL LPAREN expression RPAREN SEMI
    (10) statements -> . statements statement
    (11) statements -> . empty
    (39) empty -> .

    RBRACE          reduce using rule 39 (empty -> .)
    WRITE           reduce using rule 39 (empty -> .)
    READ            reduce using rule 39 (empty -> .)
    IF              reduce using rule 39 (empty -> .)
    DO              reduce using rule 39 (empty -> .)
    WHILE           reduce using rule 39 (empty -> .)
    ID              reduce using rule 39 (empty -> .)

    statements                     shift and go to state 56
    empty                          shift and go to state 8

state 35

    (17) statement -> WHILE LPAREN . expression RPAREN LBRACE statements RBRACE
    (19) expression -> . expression PLUS term
    (20) expression -> . expression MINUS term
    (21) expression -> . expression LT term
    (22) expression -> . expression LE term
    (23) expression -> . expression GT term
    (24) expression -> . expression GE term
    (25) expression -> . expression EQ term
    (26) expression -> . expression NEQ term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (29) expression -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    expression                     shift and go to state 57
    term                           shift and go to state 24
    factor                         shift and go to state 25

state 36

    (4) declaration -> type declaration_list SEMI .

    INT             reduce using rule 4 (declaration -> type declaration_list SEMI .)
    FLOAT           reduce using rule 4 (declaration -> type declaration_list SEMI .)
    BOOL            reduce using rule 4 (declaration -> type declaration_list SEMI .)
    RBRACE          reduce using rule 4 (declaration -> type declaration_list SEMI .)
    WRITE           reduce using rule 4 (declaration -> type declaration_list SEMI .)
    READ            reduce using rule 4 (declaration -> type declaration_list SEMI .)
    IF              reduce using rule 4 (declaration -> type declaration_list SEMI .)
    DO              reduce using rule 4 (declaration -> type declaration_list SEMI .)
    WHILE           reduce using rule 4 (declaration -> type declaration_list SEMI .)
    ID              reduce using rule 4 (declaration -> type declaration_list SEMI .)


state 37

    (6) declaration_list -> declaration_list COMMA . ID

    ID              shift and go to state 58


state 38

    (12) statement -> WRITE expression SEMI .

    RBRACE          reduce using rule 12 (statement -> WRITE expression SEMI .)
    WRITE           reduce using rule 12 (statement -> WRITE expression SEMI .)
    READ            reduce using rule 12 (statement -> WRITE expression SEMI .)
    IF              reduce using rule 12 (statement -> WRITE expression SEMI .)
    DO              reduce using rule 12 (statement -> WRITE expression SEMI .)
    WHILE           reduce using rule 12 (statement -> WRITE expression SEMI .)
    ID              reduce using rule 12 (statement -> WRITE expression SEMI .)


state 39

    (19) expression -> expression PLUS . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 59
    factor                         shift and go to state 25

state 40

    (20) expression -> expression MINUS . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 60
    factor                         shift and go to state 25

state 41

    (21) expression -> expression LT . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 61
    factor                         shift and go to state 25

state 42

    (22) expression -> expression LE . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 62
    factor                         shift and go to state 25

state 43

    (23) expression -> expression GT . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 63
    factor                         shift and go to state 25

state 44

    (24) expression -> expression GE . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 64
    factor                         shift and go to state 25

state 45

    (25) expression -> expression EQ . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 65
    factor                         shift and go to state 25

state 46

    (26) expression -> expression NEQ . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 66
    factor                         shift and go to state 25

state 47

    (27) expression -> expression AND . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 67
    factor                         shift and go to state 25

state 48

    (28) expression -> expression OR . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term EXPONENT factor
    (33) term -> . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    term                           shift and go to state 68
    factor                         shift and go to state 25

state 49

    (30) term -> term TIMES . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    factor                         shift and go to state 69

state 50

    (31) term -> term DIVIDE . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    factor                         shift and go to state 70

state 51

    (32) term -> term EXPONENT . factor
    (34) factor -> . NUMBER
    (35) factor -> . ID
    (36) factor -> . TRUE
    (37) factor -> . FALSE
    (38) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 30

    factor                         shift and go to state 71

state 52

    (38) factor -> LPAREN expression . RPAREN
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term
    (24) expression -> expression . GE term
    (25) expression -> expression . EQ term
    (26) expression -> expression . NEQ term
    (27) expression -> expression . AND term
    (28) expression -> expression . OR term

    RPAREN          shift and go to state 72
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    LT              shift and go to state 41
    LE              shift and go to state 42
    GT              shift and go to state 43
    GE              shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 53

    (13) statement -> READ ID SEMI .

    RBRACE          reduce using rule 13 (statement -> READ ID SEMI .)
    WRITE           reduce using rule 13 (statement -> READ ID SEMI .)
    READ            reduce using rule 13 (statement -> READ ID SEMI .)
    IF              reduce using rule 13 (statement -> READ ID SEMI .)
    DO              reduce using rule 13 (statement -> READ ID SEMI .)
    WHILE           reduce using rule 13 (statement -> READ ID SEMI .)
    ID              reduce using rule 13 (statement -> READ ID SEMI .)


state 54

    (18) statement -> ID ASSIGN expression . SEMI
    (19) expression -> expression . PLUS term
    (20) expression -> expression . MINUS term
    (21) expression -> expression . LT term
    (22) expression -> expression . LE term
    (23) expression -> expression . GT term
    (24) expression -> expression . GE term
    (25) expression -> expression . EQ term
    (26) expression -> expression . NEQ term
    (27) expression -> expression . AND term
    (28) expression -> expression . OR term
